# avatarforge

./: .env.example  .gitignore  AI_INFLUENCER_SYSTEM_GUIDE.md  API_DOCUMENTATION.md  API_USAGE_GUIDE.md  COMPLETE_API_REFERENCE.md  EXAMPLES.md  FITNESS_INFLUENCER_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  MANUAL_DOWNLOAD_GUIDE.md  QWEN_INTEGRATION_STATUS.md  QWEN_SETUP_STATUS.md  README.md  TESTING_SUMMARY.md  TODO.md  TROUBLESHOOTING.md  TUTORIALS.md  cleanup_failed_downloads.sh  docker-compose.yml  download_log.txt  download_loras.sh  download_models.sh  download_qwen_models.py  pyproject.toml  pytest.ini  restart_comfyui.sh  setup_high_quality_models.py
avatarforge/: __init__.py  scheduler.py
backend/: main.py  requirements.txt
docs/: GENERATION_GUIDE.md  MODEL_SETUP_GUIDE.md  PHOTOREALISTIC_GENERATION_EXAMPLES.md
scripts/: init_storage.py
tests/: README_MANUAL_TESTS.md  SESSION_SUMMARY.md  __init__.py  brown_hair_fitness_test.py  brown_hair_influencer_inpaint.py  caucasian_inpaint.py  caucasian_qwen_only.py  conftest.py  enhance_5_with_qwen.py  generate_5_photorealistic.py  generate_5_qwen_only.py  generate_fitness_influencer_with_inpaint.py  inpaint_complete_example.py  inpaint_eyes_fix.py  natural_looking_test.py  photorealistic_test.py  quick_enhanced_test.py  qwen_enhance_brown_hair.py  qwen_fitness_influencer.py  setup_qwen_models.sh  test_cleanup.py  test_controller_endpoints.py  test_database_init.py  test_file_service.py  test_fitness_influencer.py  test_fitness_influencer_enhanced.py  test_fitness_influencer_variations.py  test_generation_service.py  (+3 more)
(+20 files in other folders)
